--- a/06-t_tests.Rmd
+++ b/06-t_tests.Rmd
@@ -14,7 +14,7 @@ library(tidyverse)
 library(plotly)
 ```
 
-At the heart of many basic scientific inquiries is the simple question "Is A different from B?". The scientific notation for this question is:
+At the heart of many basic scientific inquiries is the simple question "Is A different from B?" The scientific notation for this question is:
 
 * H0: Group A is not different from group B.
 * H1: Group A is different from group B.
@@ -39,6 +39,8 @@ To answer this fundamental question one often uses a *t*-test. There are several
   * paired sample *t*-tests
     * one-sided
     * two-sided
+
+Before we cover each of these, we need to understand some of the assumptions behind *t*-tests. We shall cover that next.
 
 ## Assumptions
 Irrespective of the kind of *t*-test, we have to make a couple of important assumptions that are _not_ guaranteed to be true. In fact, these assumptions are often violated because real data, especially biological data, are messy. In order to use a *t*-test to determine if a significant difference between two sample sets of data exists we must first establish that:
@@ -108,7 +110,7 @@ What is our data are not equal in their variances? This is easier to fix as the 
 Because these two assumptions of normality and homoscedasticty are performed in tandem with one another, it is helpful to have a function that checks for both simultaneously. Below we see how just such a function would be written:
 
 ```{r}
-two_assum <- function(x){
+two_assum <- function(x) {
   x_var <- var(x)
   x_norm <- as.numeric(shapiro.test(x)[2])
   result <- c(x_var, x_norm)
@@ -127,7 +129,7 @@ r_dat %>%
 
 Do these data meet our assumptions? How do we know this?
 
-Once we have tested our assumptions we may perform a t-test to ascertain whether or not our samples are significantly different from one another. The base R function for this is `t.test()` however, by utilising the __`ggpubr`__ package we gain access to `compare_means()`, which allows us to perform any sort of test that compares sample sets of data. We will see throughout this and the following chapters why this is so useful.
+Once we have tested our assumptions we may perform a *t*-test to ascertain whether or not our samples are significantly different from one another. The base R function for this is `t.test()`; however, by utilising the __`ggpubr`__ package we gain access to `compare_means()`, which allows us to perform any sort of test that compares sample sets of data. We will see throughout this and the following chapters why this is so useful.
 
 ```{r}
 library(ggpubr)
@@ -201,19 +203,19 @@ A two-sample *t*-test is used when we have samples from two different population
 
 In the case of samples that share the same variance we perform a classical *t*-test (otherwise known as Student's *t*-test); the equation to calculate the *t*-statistic is this one:
 
-$$t=\frac{\bar{A}-\bar{B}}{\sqrt{\frac{S^{2}}{n_{A}}+\frac{S^{2}}{n_{B}}}}$$
-$\bar{A}$ and $\bar{B}$ are the means for groups $A$ and $B$, respectively; $n_{A}$ and $n_{B}$ are the sample sizes of the two sets of samples; and $S^{2}$ is the pooled variance, which is calculated as:
+$$t=\frac{\bar{A}-\bar{B}}{\sqrt{\frac{S^{2}}{n}+\frac{S^{2}}{m}}}$$
+$\bar{A}$ and $\bar{B}$ are the means for groups $A$ and $B$, respectively; $n$ and $m$ are the sample sizes of the two sets of samples, respectively; and $S^{2}$ is the pooled variance, which is calculated as:
 
-$$S^{2}=\frac{\sum_{i=1}^{n}{(x_{i}-\bar{A})^{2}}+\sum_{i=1}^{n}{(x_{i}-\bar{B})^{2}}}{n_{A}+n_{B}-2}$$
+$$S^{2}=\frac{(n-1)S_{A}^{2}+(m-1)S_{B}^{2} }{n+m-2}$$
 The degrees of freedom, $d.f.$, in the equation for the shared variance is $n_{A}+n_{B}-2$.
 
 When variances are unequal we perform the Welch's *t*-test; Welch's *t*-statistics is calculated as per this equation:
 
-$$t=\frac{\bar{A}-\bar{B}}{\sqrt{\frac{S^{2}_{A}}{n_{A}}+\frac{S^{2}_{B}}{n_{B}}}}$$
+$$t=\frac{\bar{A}-\bar{B}}{\sqrt{\frac{S^{2}_{A}}{n}+\frac{S^{2}_{B}}{m}}}$$
 
 Above, $S_{A}$ and $S_{B}$ are the variances of groups $A$ and $B$, respectively (see Section X). The degrees of freedom to use with Welch's *t*-test is obtained using the Welch–Satterthwaite equation as:
 
-$$d.f. = \frac{\left( \frac{S^{2}_{A}}{n_{A}}+\frac{S^{2}_{B}}{n_{B}} \right)^{2}}{\left( \frac{S^{4}_{A}}{n^{2}_{A}(n_{A}-1)} + \frac{S^{4}_{B}}{n^{2}_{B}(n_{B}-1)} \right)}$$
+$$d.f. = \frac{\left( \frac{S^{2}_{A}}{n}+\frac{S^{2}_{B}}{m} \right)^{2}}{\left( \frac{S^{4}_{A}}{n(n-1)} + \frac{S^{4}_{B}}{m(m-1)} \right)}$$
 
 What do we do with this *t*-statistic? In the olden days we had to calculate the $t$-statistics and the $d.f.$ by hand. These two values, the $d.f.$ and $t$-value had to be read off a table of pre-calculated $t$-values, probabilities and degrees of freedom [as in here](https://home.ubalt.edu/ntsbarsh/Business-stat/StatistialTables.pdf). Luckily, the *t*-test function nowadays does this all automagically. But if you are feeling nostalic over times that you have sadly never experienced, please calculate the $t$-statistic and the $d.f.$ yourself and give the table a go.
 
