--- a/06-t_tests.Rmd
+++ b/06-t_tests.Rmd
@@ -89,11 +89,11 @@ r_dat %>%
 
 Now we see that our two sample sets are indeed normally distributed.
 
-What if we find that the data are not normally distributed? Although there are many options, the easiest is to perform a Wilcoxon Rank Sum test, which is the non-parametric equivalent to a *t*-test (see Section X). Another option is to transform the data (Chapter Y).
+What if we find that the data are not normally distributed? Although there are many options, the easiest is to perform a Wilcoxon Rank Sum test, which is the non-parametric equivalent to a *t*-test (see Section X). Another option is to transform the data (Chapter 11).
 
 ### Homoscedasticity
 
-Besides requiring that our data are normally distributed, we must also ensured that they are homoscedastic. This word means that the scedasticity (variance) of things are homogeneous (similar). In practical terms this means that the variance of the samples we are comparing should not be more than four times greater than one another. In R, we use the function `var()` to check the variance in a sample:
+Besides requiring that our data are normally distributed, we must also ensured that they are homoscedastic. This word means that the scedasticity (variance) of things are homogeneous (similar). In practical terms this means that the variance of the samples we are comparing should not be more than two to four times greater than one another. In R, we use the function `var()` to check the variance in a sample:
 
 ```{r}
 r_dat %>% 
@@ -101,9 +101,9 @@ r_dat %>%
   summarise(sample_var = var(dat))
 ```
 
-Above we see that the variance of our two samples are homoscedastic because the variance of one is not more than four times greater than the other.
+Above we see that the variance of our two samples are homoscedastic because the variance of one is not more than two to four times greater than the other.
 
-What is our data are not equal in their variances? This is easier to fix as the solution is built right into the *t*-test function; all we need to do is to perform Welch Two Sample *t*-test (the default) in the `t.test()` function that we shall use below. If the variances are equal, we simply perform a normal Student's *t*-test by setting the argument `var.equal = TRUE` in the function call (see below).
+What if our data are not equal in their variances? This is easier to fix as the solution is built right into the *t*-test function; all we need to do is to perform Welch Two Sample *t*-test (the default) in the `t.test()` function that we shall use below. If the variances are equal, we simply perform a normal Student's *t*-test by setting the argument `var.equal = TRUE` in the function call (see below).
 
 ### Two for one
 
@@ -129,7 +129,7 @@ r_dat %>%
 
 Do these data meet our assumptions? How do we know this?
 
-Once we have tested our assumptions we may perform a *t*-test to ascertain whether or not our samples are significantly different from one another. The base R function for this is `t.test()`; however, by utilising the __`ggpubr`__ package we gain access to `compare_means()`, which allows us to perform any sort of test that compares sample sets of data. We will see throughout this and the following chapters why this is so useful.
+Once we have tested our assumptions we may perform a *t*-test to ascertain whether or not our samples are significantly different from one another. The base R function for this is `t.test()`; however, by utilising the __`ggpubr`__ package we gain access to `compare_means()`, which allows us to perform any sort of test that compares sample sets of data and outputs the results as a dataframe. We will see throughout this and the following chapters why this is so useful.
 
 ```{r}
 library(ggpubr)
@@ -143,7 +143,7 @@ Generally when we use a *t*-test it will be a two-sample *t*-test (see below). O
 # create a single sample of random normal data
 set.seed(666)
 r_one <- data.frame(dat = rnorm(n = 20, mean = 20, sd = 5),
-                    sample = "1")
+                    sample = "A")
 
 # compare random data against a population mean of 20
 t.test(r_one$dat, mu = 20)
@@ -217,9 +217,9 @@ Above, $S_{A}$ and $S_{B}$ are the variances of groups $A$ and $B$, respectively
 
 $$d.f. = \frac{\left( \frac{S^{2}_{A}}{n}+\frac{S^{2}_{B}}{m} \right)^{2}}{\left( \frac{S^{4}_{A}}{n(n-1)} + \frac{S^{4}_{B}}{m(m-1)} \right)}$$
 
-What do we do with this *t*-statistic? In the olden days we had to calculate the $t$-statistics and the $d.f.$ by hand. These two values, the $d.f.$ and $t$-value had to be read off a table of pre-calculated $t$-values, probabilities and degrees of freedom [as in here](https://home.ubalt.edu/ntsbarsh/Business-stat/StatistialTables.pdf). Luckily, the *t*-test function nowadays does this all automagically. But if you are feeling nostalic over times that you have sadly never experienced, please calculate the $t$-statistic and the $d.f.$ yourself and give the table a go.
+What do we do with this *t*-statistic? In the olden days we had to calculate the $t$-statistics and the $d.f.$ by hand. These two values, the $d.f.$ and $t$-value had to be read off a table of pre-calculated $t$-values, probabilities and degrees of freedom [as in here](https://home.ubalt.edu/ntsbarsh/Business-stat/StatistialTables.pdf). Luckily, the *t*-test function nowadays does this all automagically. But if you are feeling nostalgic over times that you have sadly never experienced, please calculate the $t$-statistic and the $d.f.$ yourself and give the table a go.
 
-Back to the present day and the wonders of modern technology. Let's generate some new random normal data and test to see if the data belonging to the two groups differe significantly from one-another. First, we apply the *t*-test function as usual:
+Back to the present day and the wonders of modern technology. Let's generate some new random normal data and test to see if the data belonging to the two groups differ significantly from one-another. First, we apply the *t*-test function as usual:
 
 ```{r}
 # random normal data
@@ -244,9 +244,8 @@ Now we do the same test using a convenient function that comes with the **ggpubr
 
 ```{r}
 # perform t-test using `compare_means()`
-compare_means(dat ~ sample, data = r_two, method = "t.test")
-# a t-test (not Welch's t-test) is done, so as far as I know
-# `compare_means()` does not allow one to account for unequal vars
+# note that compare_means() takes the same arguments as t.test()
+compare_means(dat ~ sample, data = r_two, method = "t.test", var.equal = TRUE)
 ```
 
 Note above that in order to tell `compare_means()` to perform a *t*-test we feed it the argument `method = "t.test"`. The output is similar to that of the familiar `t.test()` function that we used earlier, but the output is more abbreviated and less useful. Typically, the output of the *t*-tests that we need to report in the results sections of our papers include the $t$-statistic, the $P$-value, and the degrees of freedom, $d.f.$, and these are absent from the `compare_means()` function's output.
@@ -256,11 +255,11 @@ Note above that in order to tell `compare_means()` to perform a *t*-test we feed
 Just as with the one-sample *t*-tests above, we may also specify which tail of the distribution we are interested in when we compare the means of our two samples. We do so by providing the same arguments as previously:
 
 ```{r}
-# is the mean of sample 2 smaller than that of sample 1?
-compare_means(dat ~ sample, data = r_two, method = "t.test", alternative = "less")
+# is the mean of sample B smaller than that of sample A?
+compare_means(dat ~ sample, data = r_two, method = "t.test", var.equal = TRUE, alternative = "less")
 
-# is the mean of sample 2 greater than that of sample 1?
-compare_means(dat ~ sample, data = r_two, method = "t.test", alternative = "greater")
+# is the mean of sample B greater than that of sample A?
+compare_means(dat ~ sample, data = r_two, method = "t.test", var.equal = TRUE, alternative = "greater")
 ```
 
 What do these results show? Is this surprising?
@@ -281,7 +280,7 @@ compare_means(dat ~ sample, data = r_two, method = "t.test", alternative = "two.
 
 Paired *t*-tests are done when comparing matched samples, and in other words, when our second assumption of *t*-tests is violated: the observations are independent of one another---in paired samples, clearly they are not independent. This test is also sometimes called a dependent sample *t*-test.
 
-For example, we design a survey to determine if, in a group of 20 people, individuals' right arms differ in length from that of their left arms. For person A, we measure her right arm and her left arm. For person B we measure his right arm and his left arm. So we go all the way to person 20. A right arm belonging with one individual is always matched against a left arm in the same individual. The samples are paired so we use a paired *t*-test. Another example: we follow the growth of a sample of 20 piglets over three weeks to see if they weigh more after three weeks than they did at the start of the assessment period. We measure the first piglet, named Halaal, at the start of the three week period and again after. We do the same for the second piglet, Kosher. And so it goes. Each piglet has a paired set of measurements, one before matched with one after. In both these examples the data in the two groups (left arm and right arm; or before and after) are not independent, so we need to account for this in the analysis. In practice, how do we perform such a *t*-test?
+For example, we design a survey to determine if, in a group of 20 people, individuals' right arms differ in length from that of their left arms. For person A, we measure her right arm and her left arm. For person B we measure his right arm and his left arm. So we go all the way to person 20. A right arm belonging with one individual is always matched against a left arm in the same individual. The samples are paired so we use a paired *t*-test. Another example: we follow the growth of a sample of 20 piglets over three weeks to see if they weigh more after three weeks than they did at the start of the assessment period. We measure the first piglet, named Halal, at the start of the three week period and again after. We do the same for the second piglet, Kosher. And so it goes. Each piglet has a paired set of measurements, one before matched with one after. In both these examples the data in the two groups (left arm and right arm; or before and after) are not independent, so we need to account for this in the analysis. In practice, how do we perform such a *t*-test? Who can think of a dataset we've used in the past that we would use a paired *t*-test for?
 
 ```{r}
 compare_means(dat ~ sample, data = r_two, method = "t.test", paired = TRUE)
@@ -300,7 +299,7 @@ mosquito
 
 ### One-sample and two-sample tests
 
-As with *t*-tests, proportion tests may also be based on one sample, or two. If we have only one sample we must specify the total number of trials as well as what the expected population probability of success is. Because these are individual values, and not matrices, we will show what this would look like without using any objects but will rather give each argument within `prop.test()` an exact value. In the arguments within `prop.test()`, `x` denotes the number of successes recorded, `n` shows the total number of individual trials performed, and `p` is the expected probability. It is easiest to consider this as though it were a series of 100 coin tosses.
+As with *t*-tests, proportion tests may also be based on one sample, or two. If we have only one sample we must specify the total number of trials as well as what the expected population probability of success is. Because these are individual values, and not matrices, we will show what this would look like without using any objects but will rather give each argument within `prop.test()` a single exact value. In the arguments within `prop.test()`, `x` denotes the number of successes recorded, `n` shows the total number of individual trials performed, and `p` is the expected probability. It is easiest to consider this as though it were a series of 100 coin tosses.
 
 ```{r}
 # When the probability matches the population
@@ -343,12 +342,117 @@ prop.test(mosquito, alternative = "greater")
 
 Do these results differ from the two-sided test? What is different?
 
+## A *t*-test workflow
+
+Now that we have seen how to compare the means of two sample sets of data, let's see what that complete workflow would look like in R. For this example we will use the `ecklonia` data from [Intro R Workshop: Data Manipulation, Analysis and Graphing](https://robwschlegel.github.io/Intro_R_Workshop/).
+
+### Loading data
+
+Before we can run any analyses we will need to load our data. We are also going to convert these data from their wide format into a long format because this is more useful for the rest of our workflow.
+
+```{r}
+ecklonia <- read_csv("data/ecklonia.csv") %>% 
+  gather(key = "variable", value = "value", -species, -site, -ID)
+```
+
+### Visualising data
+
+With our data loaded, let's visualise them in order to ensure that these are indeed the data we are after. Visualising the data will also help us to formulate a hypothesis.
+
+```{r, fig.cap="Boxplots showing differences in morphometric properties of the kelp _Ecklonia maxima_ at two sites in False Bay."}
+ggplot(data = ecklonia, aes(x = variable, y = value, fill = site)) +
+  geom_boxplot() +
+  coord_flip()
+```
+
+The first thing we should notice from the figure above is that our different measurements are on very different scales. This makes comparing all of our data visually rather challenging. Even given this complication, one should readily be able to make out that the measurement values at Batsata Rock appear to be greater than at Boulders Beach. Within the framework of the scientific process, that is what we would call an "observation", and is the first step towards formulating a hypothesis. The next step is to refine our observation into a hypothesis. By what measurement are the kelps greater at one site than the other?
+
+### Formulating a hypothesis
+
+Looking at the figure above it appears that for almost all measurements of length, Batsata Rock far exceeds that of Boulders Beach however, the stipe masses between the two sites appear to be more similar. Let's pull out just this variable and create a new boxplot.
+
+```{r, fig.cap="Boxplots showing the difference in stipe mass (kg) of the kelp _Ecklonia maxima_ at two sites in False Bay."}
+# filter the data
+ecklonia_sub <- ecklonia %>% 
+  filter(variable == "stipe_mass")
+
+# then create a new figure
+ggplot(data = ecklonia_sub, aes(x = variable, y = value, fill = site)) +
+  geom_boxplot() +
+  coord_flip() +
+  labs(y = "stipe mass (kg)", x = "") +
+  theme(axis.text.y = element_blank(),
+        axis.ticks.y = element_blank())
+```
+
+Now we have a more interesting comparison at hand. The question I think of when I look at these data is "Are the stipe masses at Batsata Rock greater than at Boulders Beach?". The hypothesis necessary to answer this question would look like this:
+
+* H0: Stipe mass at Batsata Rock **is not** greater than at Boulders Beach.
+* H1: Stipe mass at Batsata Rock **is** greater than at Boulders Beach.
+
+Or more formally:
+
+* $H_{0}: \bar{A} \leq \bar{B}$ 
+* $H_{a}: \bar{A} > \bar{B}$.
+
+Which test must we use for this hypothesis?
+
+### Choosing a test
+
+Before we can pick the correct statistical test for our hypothesis, we need to be clear on what it is we are asking. Starting with the data being used is usually a good first step. As we may see in the above figure, we have two sample sets that we are comparing. Therefore, unsurprisingly, we will likely be using a *t*-test. But we're not done yet. How is it that we are comparing these two sample sets? Remember from the examples above that there are multiple different ways to compare two sets of data. For our hypothesis we want to see if the stipe mass at Batsata Rock is **greater than** the stipe mass at Boulders Beach, not just that they are different. Because of this we will need a one-sided *t*-test. But wait, there's more! We've zeroed in on which sort of test would be appropriate for our hypothesis, but before we run it we need to check our assumptions. 
+
+### Checking assumptions
+
+In case we forgot, here are the assumptions for a *t*-test:
+
+* the dependent variable must be continuous (i.e. it is measured at the interval or ratio level),
+* the observations in the groups being compared are independent of each other,
+* the data are **normally distributed**, and 
+* that the data are **homoscedastic**, and in particular, that there are no outliers.
+
+We know that the first two assumptions are met because our data are measurements of mass at two different sites. Before we can run our one-sided *t*-test we must meet the last two assumptions. Lucky us, we have a function tat will do that automagically.
+
+```{r}
+ecklonia_sub %>% 
+  group_by(site) %>% 
+  summarise(stipe_mass_var = two_assum(value)[1],
+            stipe_mass_norm = two_assum(value)[2])
+```
+
+Lovely. On to the next step.
+
+### Running an analysis
+
+With our assumptions checked, we may now analyse our data. We'll see below how to do this with both of the functions we've learned in this chapter for comparing means of two sample sets.
+
+```{r}
+# traditional output
+t.test(value ~ site, data = ecklonia_sub, var.equal = TRUE, alternative = "greater")
+
+# dataframe output
+compare_means(value ~ site, data = ecklonia_sub, method = "t.test", var.equal = TRUE, alternative = "greater")
+```
+
+### Interpreting the results
+
+We may reject the null hypothesis, that the stipe mass of kelps at Batsata Rock are not greater than at Boulders Beach, if our *t*-test returns a *p*-value $\leq$ 0.05. We must also pay attention to some of the other results from our *t*-test, specifically the *t*-value (t) and the degrees of freedom (df) as these are also needed when we are writing up our results. From all of the information above, we may accept the alternative hypothesis. But how do we write that up?
+
+### Drawing conclusions
+
+There are many ways to present ones findings. Style, without _too much_ flourish, is encouraged as long as certain necessary pieces of information are provided. The sentence below is a very minimalist example of how one may conclude this mini research project. A more thorough explanation would be desirable.
+
+> The stipe mass (kg) of the kelp _Ecklonia maxima_ was found to be significantly greater at Batsata Rock than at Boulders Beach (*p* = 0.03, *t* = 1.87, df = 24).
+
+### Going further
+
+But why though? As is often the case in life, and science is no exception, answers to our questions just create even more questions! Why would the mass of kelp stipes at one locations in the same body of water and only a kilometre or so apart be significantly different? It looks like we are going to need to design a new experiment... Masters thesis anyone?
+
 ## Exercises
 
 ### Exercise 1
 
 Find or create your own normally distributed data and think of a hypothesis you could use a t-test for. Write out the hypothesis, test it, and write a one sentence conclusion for it. Provide all of the code used to accomplish this.
 
-### Exercise 1
+### Exercise 2
 
 Do the same as Exercise 1, but for probability data.
